# bridge-editor

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md  bezier_data.cpp  bridge.cpp  bridge_editor.cpp  show_bridge.cpp
triangle/: A.1.ele  A.1.node  A.1.poly  box.1.edge  box.1.ele  box.1.node  box.1.poly  box.1.v.edge  box.1.v.node  box.poly  makefile  showme.c  triangle.c  triangle.h  tricall
